# dragon-script

./: .gitignore  LICENSE  README.md
compiler/: Cargo.toml
docs/language design notes/: book.toml
docs/language reference/: book.toml
docs/the book/: book.toml
docs/the book/src/: README.md  (+2 more)
dragon-script-vscode/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
dragon-script-vscode/syntaxes/: dragonscript.tmLanguage.json
drgnc/: README.md  dune-project  package.json
drgnc/lib/: dune
drgns/: Cargo.toml  build.zig  drgns  go.mod  go.sum  main.go
drgns/pkg/: README.md
drgns/src/: arena.rs  data.rs  error_handler.rs  errors.rs  eval.rs  interner.rs  lexer.rs  lookahead.rs  main.rs  parser.rs  source.rs  values.rs
drgns/src/arena/: arena.rs  span.rs
drgns/src/lexer/: test.rs  test_utils.rs
drgns/src/parser/: ast.rs
drgns/src/source/: arena.rs  reader.rs  string.rs  view.rs
examples/: 000_hello_world.drgns  001_basics.drgns  011_booleans.drgns  012_numbers.drgns  013_strings.drgns  014_lists.drgns  015_objects.drgns  016_closures.drgns  020_arithmetic.drgns  021_logic.drgns  022_bitwise.drgns  023_calling_functions.drgns  024_list_and_string_expressions.drgns  025_grouping.drngs  026_type_expressions.drgns  027_flow_control_expressions.drgns  028_passing_modes.drgns  029_error_handling.drgns  030_variable_assignments.drgns  031_function_declarations.drgns  032_updating_lists_and_objects.drgns  README.md
examples/subset01/: 000_hello_world.drgns  001_basics.drgns  010_numbers.drgns  020_arithmetic.drgns  021_logic.drgns  022_grouping.drgns  023_flow_control.drgns  030_functions.drgns
examples/subset02/: 000_hello_world.drgns  001_basics.drgns  010_numbers.drgns  020_arithmetic.drgns  022_grouping.drgns
spec/subset02/: grammar.ebnf
(+24 files in other folders)
