[package]
name = "drgns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
bimap = "0.6.3"
clap = { version = "4.4.0", features = ["derive"] }
derive_more = "0.99.17"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
strum = "0.25.0"
strum_macros = "0.25.2"
thiserror = "1.0.48"
yansi = "0.5.1"

[dev-dependencies]
itertools = "0.11.0"
